--- a/FirstApp/src/app/home/homepage/homepage.component.html
+++ b/FirstApp/src/app/home/homepage/homepage.component.html
@@ -1,1 +1,6 @@
 <app-navbar></app-navbar>
+<div class="container-fluid">
+    <!-- string interpolation the end result should be in string -->
+    String interpolation
+    <p> This is {{title}} and the page number is {{pageNumber}} </p>
+</div>
